--- a/WIFI/platformio.ini
+++ b/WIFI/platformio.ini
@@ -1,20 +1,21 @@
-[env:esp32dev]
-platform = espressif32
-board = esp32dev
+[env:esp32-s3-devkitc-1]
+platform = espressif32@6.12.0
+board = esp32-s3-devkitc-1
 framework = arduino
 monitor_speed = 115200
 
-; ESP32-WROOM-32 specific settings
+; ESP32-S3 specific settings (board has Octal Flash - must match or boot fails)
 board_build.f_cpu = 240000000L
-board_build.f_flash = 40000000L
+board_build.f_flash = 80000000L
 board_build.flash_size = 4MB
+board_build.arduino.memory_type = opi_opi
 
 ; Upload settings
 upload_speed = 921600
 upload_flags = 
     --before=default_reset
     --after=hard_reset
-    --chip=esp32
+    --chip=esp32s3
 
 ; Serial monitor settings
 monitor_filters = 
